# MillluBridge

./: .gitignore  DEV.md  MilluBridge.code-workspace  README.md  README.md.backup  requirements.txt
Bridge/: .gitignore  README.md  config.json  install.sh  pyproject.toml  run.sh  setup.py  test_sysex_logging.py  test_sysex_send.py
Bridge/docs/: BRIDGE_FEATURES.md  DEBUGGING_SYSEX.md  IMPLEMENTATION_COMPLETE.md  LAYER_CHANGE_FLOW.md  LAYER_PERSISTENCE_IMPLEMENTATION.md  NOWDE_LOGS_REFERENCE.md  QUICK_REFERENCE.md  README.md  SYSEX_FIX_SUMMARY.md  SYSEX_LOGGING.md  SYSEX_LOGGING_SUMMARY.md  SYSEX_QUICK_REF.md  TESTING_CHECKLIST.md  build_instructions.md
Bridge/scripts/: build-nuitka-crossplatform-macos-x64.sh  build-nuitka-macos-universal.sh  build-nuitka-macos-x64.sh  build-nuitka.sh  build.sh  create-icon.sh  process-icon.py
Bridge/src/: main.py
Bridge/src/bridge/: __init__.py  mapper.py
Bridge/src/dali_control/: __init__.py  manager.py
Bridge/src/gui/: __init__.py  main_window.py
Bridge/src/midi/: __init__.py  input_manager.py  message_sender.py  output_manager.py
Bridge/src/osc/: __init__.py  message_handler.py  server.py
DALItridonic/: README.md  main.py  pyproject.toml  requirements.txt
Nowde/: README.md  copy_firmware.py  platformio.ini
Nowde/docs/: ESP-NOW_PROTOCOL.md  README.md  SERIAL_LOGS_REFERENCE.md  SERIAL_PORT_SWITCH_GUIDE.md
Nowde/src/: esp_now_handlers.cpp  esp_now_handlers.h  main.cpp  midi.cpp  midi.h  nowde_config.h  nowde_state.cpp  nowde_state.h  receiver_mode.cpp  receiver_mode.h  sender_mode.cpp  sender_mode.h  storage.cpp  storage.h  sysex.cpp  sysex.h
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  OTA_UPGRADE.md  TROUBLESHOOTING.md  USER_GUIDE.md
src/: main.py
src/midi/: output_manager.py
src/osc/: message_handler.py
